--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,28 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme2" />
+        <activity
+            android:name=".IntroSlider"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Register"
+            android:theme="@style/AppTheme2" />
+        <activity android:name=".Setupprofile" />
+        <activity
+            android:name=".Login"
+            android:theme="@style/AppTheme2" />
+        <activity
+            android:name=".LandingPage"
+            android:theme="@style/AppTheme2" />
+        <activity android:name=".ProfileSet"></activity>
     </application>
 
 </manifest>
