Added Setting up Profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kuroro.auction">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -33,7 +34,8 @@
         <activity
             android:name=".LandingPage"
             android:theme="@style/AppTheme2" />
-        <activity android:name=".ProfileSet"></activity>
+        <activity android:name=".ProfileSet"
+                android:theme="@style/AppTheme2"/>
     </application>
 
 </manifest>
