Added Manage Own Bid

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.kuroro.auction">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -33,8 +34,9 @@
         <activity
             android:name=".LandingPage"
             android:theme="@style/AppTheme2" />
-        <activity android:name=".ProfileSet"
-                android:theme="@style/AppTheme2"/>
+        <activity
+            android:name=".ProfileSet"
+            android:theme="@style/AppTheme2" />
     </application>
 
 </manifest>
